Add start and end icon to Button
Add react-icons package; add stories to show Button with an icon before and after the label

--- a/frontend/react-components/src/components/Button/styles/Button.module.scss
+++ b/frontend/react-components/src/components/Button/styles/Button.module.scss
@@ -43,6 +43,10 @@
 
   box-shadow: var(--btn-shadow) var(--btn-shadow-clr);
 
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
   &:hover,
   &:focus {
     --bg-color: var(--clr-default--hover);
