--- a/frontend/react-components/src/components/Button/styles/Button.module.scss
+++ b/frontend/react-components/src/components/Button/styles/Button.module.scss
@@ -36,6 +36,8 @@
   border: 1px solid transparent;
   transition: background-color 0.3s ease-in-out;
   font-size: 14px;
+  font-weight: 500;
+
   border-radius: 6px;
   cursor: pointer;
 
