Add size variants
Add label prop to Storybook Template, change labels on some stories, change color type in BtnProps to a union of string literals

--- a/frontend/react-components/src/components/Button/styles/Button.module.scss
+++ b/frontend/react-components/src/components/Button/styles/Button.module.scss
@@ -71,6 +71,14 @@
     }
   }
 
+  &--sm {
+    padding: 6px 12px;
+  }
+
+  &--lg {
+    padding: 11px 22px;
+  }
+
   &--text {
     color: var(--clr-primary);
     background: none;
@@ -79,6 +87,10 @@
     &:hover,
     &:focus {
       background-color: var(--btn-no-bg--hover);
+    }
+
+    &:disabled {
+      background: none;
     }
   }
 
